# Testing

./: .travis.yml  CMakeLists.txt
include/testing/: testing.hpp
tests/: CMakeLists.txt  func_test.cpp
